[gd_scene load_steps=2 format=3 uid="uid://bruwnt7h47nl1"]

[ext_resource type="Script" path="res://ui/pausemenu.gd" id="1_vl8xe"]

[node name="Pausemenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vl8xe")

[node name="OptionsMarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -100.5
offset_right = 400.0
offset_bottom = 100.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="OptionsMarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Fullscreen" type="Button" parent="OptionsMarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="MainMenu" type="Button" parent="OptionsMarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main menu"

[connection signal="pressed" from="OptionsMarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="OptionsMarginContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="OptionsMarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
